--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "15.1.4",
     "nextjs-toploader": "^3.7.15",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
